# SFPLiberate

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  APPWRITE_FUNCTION_REMOVAL.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  ISSUE_4_RESOLUTION.md  MODERNIZATION_README.md  Makefile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.esphome.yml  docker-compose.yml  package-lock.json  repository.json
.github/: copilot-instructions.md  pull_request_template.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.new  alembic.ini  appwrite_database_manager.py  database_manager.py  main.py  migrate_to_appwrite.py  pyproject.toml  requirements.txt  sfp_parser.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/v1/: esphome.py  esphome_websocket.py  ha_bluetooth.py  health.py  modules.py  router.py  submissions.py
backend/app/core/: __init__.py  database.py  logging.py
backend/app/models/: __init__.py  module.py
backend/app/repositories/: __init__.py  module_repository.py
backend/app/schemas/: __init__.py  module.py  submission.py
backend/app/services/: __init__.py  module_service.py  sfp_parser.py
backend/app/services/esphome/: __init__.py  connection_manager.py  device_manager.py  proxy_manager.py  proxy_service.py  schemas.py  websocket_schemas.py
backend/app/services/ha_bluetooth/: __init__.py  ble_tracer.py  ha_bluetooth_client.py  schemas.py
backend/tests/: conftest.py
backend/tests/integration/: test_modules_api.py
backend/tests/unit/: test_sfp_parser.py
ble-proxy-service/: main.py
docs/: API_AND_COMMUNITY_ARCHITECTURE.md  APPWRITE_CONSOLE_SETUP.md  APPWRITE_DATABASE.md  APPWRITE_DEPLOYMENT.md  APPWRITE_DEPLOYMENT_GUIDE.md  APPWRITE_E2E_ADVERSARIAL_REVIEW.md  APPWRITE_IMPLEMENTATION_SUMMARY.md  APPWRITE_NATIVE_ARCHITECTURE.md  APPWRITE_SECURITY_ACTION_PLAN.md  APPWRITE_SITES_DEPLOYMENT.md  BLE_API_SPECIFICATION.md  BUILD_OPTIMIZATION_SUMMARY.md  DEPLOYMENT.md  DOCKER_DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  ESPHOME_IMPLEMENTATION.md  ESPHOME_IMPLEMENTATION_STATUS.md  ESPHOME_INTEGRATION.md  ESPHOME_PROXY_DESIGN.md.archive  ESPHOME_PROXY_IMPLEMENTATION_PLAN.md.archive  ESPHOME_PROXY_README.md  ESPHOME_PROXY_SUMMARY.md.archive  FRONTEND_ARCHITECTURE_REVIEW.md  HOME_ASSISTANT.md  HOME_ASSISTANT_ADDON_PLAN.md  HOME_ASSISTANT_ADDON_REVIEW.md  IMPLEMENTATION_STATUS.md  ISSUE_4_IMPLEMENTATION.md  MIGRATION_GUIDE.md  MODERNIZATION_PROPOSAL.md  MODERNIZATION_SUMMARY.md  NEXTJS_REWRITE_SUMMARY.md  RELEASE_PROCESS.md  SIDECAR_SITE_TODO.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  appwrite.config.json  appwrite.json  eslint.config.mjs  index.html  next.config.ts  nginx.conf  package-lock.json  package.json  script.js  style.css  (+1 more)
frontend-nextjs/: .env.example  .env.local.example  README.md  next.config.ts
(+84 files in other folders)
